Changed index page so it works as intended

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,6 @@
 {% extends 'base.html' %}
 
-{% block head %}
-{% endblock %}
-
-{% block body %}
+{% block content %}
 <h1>Hello</h1>
 {% endblock %}
 
