--- a/app/templates/recipes_list.html
+++ b/app/templates/recipes_list.html
@@ -3,8 +3,18 @@
 {% block content %}
 
 {% for recipe in recipes %}
-<div><p>{{ recipe.name }} says: <b>{{ recipe.content }}</b></p></div>
-
+<table class="table table-hover">
+    <tr>
+        <td>
+            <a href="{{ url_for('recipe', recipe_name=recipe.name) }}">
+                {{ recipe.name }}
+            </a>
+            :
+            <br>
+            {{ recipe.content }}
+        </td>
+    </tr>
+</table>
 {% endfor %}
 
 {% endblock %}
