--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Welcome to Flask Cookbook!</h1>
+<div class="container">
+    <h1>Welcome to Flask Cookbook!</h1>
+</div>
 {% endblock %}
 
