--- a/app/templates/recipe.html
+++ b/app/templates/recipe.html
@@ -1,1 +1,22 @@
 {% extends 'base.html' %}
+
+{% block content %}
+
+<div class="container">
+    <table class="table table-hover">
+        <img src="/static/img/meal.jpg">
+        <tr>
+            <td><img src="/static/img/meal_icon.jpg"></td>
+            <td>
+                <a href="{{ url_for('recipe', recipe_name=recipe.name) }}">
+                    <h3>{{ recipe.name }}</h3>
+                </a>
+                :
+                <br>
+                {{ recipe.content }}
+            </td>
+        </tr>
+    </table>
+</div>
+
+{% endblock %}
