--- a/app/templates/recipes_list.html
+++ b/app/templates/recipes_list.html
@@ -3,18 +3,21 @@
 {% block content %}
 
 {% for recipe in recipes %}
-<table class="table table-hover">
-    <tr>
-        <td>
-            <a href="{{ url_for('recipe', recipe_name=recipe.name) }}">
-                {{ recipe.name }}
-            </a>
-            :
-            <br>
-            {{ recipe.content }}
-        </td>
-    </tr>
-</table>
+<div class="container">
+    <table class="table table-hover">
+        <tr>
+            <td><img src="/static/img/meal_icon.jpg"></td>
+            <td>
+                <a href="{{ url_for('recipe', recipe_name=recipe.name) }}">
+                    {{ recipe.name }}
+                </a>
+                :
+                <br>
+                {{ recipe.content }}
+            </td>
+        </tr>
+    </table>
+</div>
 {% endfor %}
 
 {% endblock %}
