--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,31 +1,76 @@
-{% extends 'bootstrap/base.html' %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block title %}
-    {% if title %}{{ title }} - Flask Cookbook{% else %}Welcome to Flask Cookbook{% endif %}
-{% endblock %}
+<head>
+    {% block head %}
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    {% if title %}
+    <title>{{ title }}</title>
+    {% else %}
+    <title>Flask Cookbook</title>
+    {% endif %}
+
+    <!---Font Icon-->
+    <link href="static/css/font-awesome.min.css" rel="stylesheet">
+
+    <!-- static/css -->
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/styles.min.css" rel="stylesheet">
+    <link href="static/css/select2.min.css" rel="stylesheet">
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="static/favicon.ico" />
+    <link rel="icon" href="static/favicon.ico" />
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    {% endblock %}
+</head>
 
 {% block navbar %}
-    <nav class="navbar navbar-default">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="{{ url_for('.index') }}">Flask Cookbook</a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a href="{{ url_for('login') }}">Login</a></li>
-                    <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
-                    <li><a href="{{ url_for('recipes_list') }}">View Recipes</a></li>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+        <div class="container-fluid justify-content-center">
+            <a class="navbar-brand" href="{{ url_for('index') }}"><i class="fa fa-cutlery" aria-hidden="true"></i>Flask Cookbook</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Recipes
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="{{ url_for('recipes_list')  }}">Browse Recipes</a>
+                            <a class="dropdown-item" href="{{ url_for('recipes_list') }}">Recipe Detail</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('contact')  }}">Contact</a>
+                    </li>
+                    <li class="nav-item btn-submit-recipe">
+                        <a class="nav-link" href="{{ url_for('add_recipe')  }}"><i class="fa fa-upload" aria-hidden="true"></i> Submit Recipe</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 {% endblock %}
+
 
 {% block content %}
     <div class="container">
@@ -41,3 +86,46 @@
         {% block app_content %}{% endblock %}
     </div>
 {% endblock %}
+
+{% block footer %}
+<!-- Footer -->
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-sm-3">
+                <h5>About</h5>
+                <p>Website where you can add all you recipes and discover exciting new ones!</p>
+            </div>
+            <div class="col-lg-3 col-sm-3">
+                <h5>Archive</h5>
+                <ul>
+                    <li><a href="#">June 2018</a></li>
+                    <li><a href="#">July 2018</a></li>
+                    <li><a href="#">August 2018</a></li>
+                    <li><a href="#">September 2018</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-sm-3">
+                <h5>Recipes</h5>
+                <ul>
+                    <li><a href="{{ url_for('recipes_list')  }}">Browse Recipes</a></li>
+                    <li><a href="{{ url_for('recipes_list')  }}">Recipe Detail</a></li>
+                    <li><a href="{{ url_for('add_recipe')  }}">Add Recipe</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
+
+{% endblock %}
+
+<!-- Javascript -->
+<script src="static/js/plugins/jquery.min.js"></script>
+<script src="static/js/plugins/popper.min.js"></script>
+<script src="static/js/plugins/bootstrap.min.js"></script>
+<script src="static/js/plugins/select2.min.js"></script>
+<script src="static/js/plugins/jquery-ui.js"></script>
+
+<script src="static/js/scripts.js"></script>
+
+</html>
