--- a/app/templates/add_recipe.html
+++ b/app/templates/add_recipe.html
@@ -3,8 +3,8 @@
 
 {% block app_content %}
     <h1>Add recipe</h1>
-    <div class="row">
-        <div class="col-md-4">
+    <div class="submit">
+        <div class="col-md-16">
             {{ wtf.quick_form(form) }}
         </div>
     </div>
