--- a/app/templates/recipe.html
+++ b/app/templates/recipe.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block app_content %}
 
 <div class="container">
     <table class="table table-hover">
