--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -2,11 +2,16 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>Contact</h1>
-    <div class="submit">
-        <div class="col-md-8">
-            {{ wtf.quick_form(form) }}
+<div class="page contact">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-12 title text-center">
+                    <h1>Contact</h1>
+                </div>
+                <div class="col-md-8">
+                    {{ wtf.quick_form(form) }}
+                </div>
+            </div>
         </div>
-    </div>
-    <br>
+</div>
 {% endblock %}
