--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -30,7 +30,7 @@ body {
   letter-spacing: 5px;
 }
 .navbar .navbar-brand i {
-  color: #e13b2b;
+  color: #08a81e;
 }
 .navbar .navbar-nav .btn-submit-recipe {
   position: absolute;
@@ -41,7 +41,7 @@ body {
   padding: 10px;
   color: #fff;
   border-radius: 4px;
-  background-color: #e13b2b;
+  background-color: #08a81e;
 }
 .navbar .navbar-nav .btn-submit-recipe a i {
   margin-right: 5px;
@@ -53,13 +53,13 @@ body {
 .navbar .dropdown-item:active {
   text-decoration: none;
   color: #fff;
-  background-color: #e13b2b;
+  background-color: #08a81e;
 }
 .navbar .dropdown-item:focus,
 .navbar .dropdown-item:hover {
   text-decoration: none;
   color: #fff;
-  background-color: #e13b2b;
+  background-color: #08a81e;
 }
 .navbar-light .navbar-nav .nav-link {
   font-weight: bold;
@@ -68,8 +68,8 @@ body {
 }
 .navbar-light .navbar-nav .active > .nav-link,
 .navbar-light .navbar-nav .nav-link.active {
-  color: #e13b2b;
-  border-bottom: 3px solid #e13b2b;
+  color: #08a81e;
+  border-bottom: 3px solid #08a81e;
 }
 .dropdown-menu {
   margin: 0;
@@ -82,7 +82,7 @@ body {
   padding: 10px;
   color: #fff;
   border-radius: 4px;
-  background-color: #e13b2b;
+  background-color: #08a81e;
   border: 0;
 }
 .carousel-item h1 {
@@ -174,7 +174,7 @@ body {
   padding: 10px 15px;
   text-align: left;
   color: #fff;
-  background-color: #e13b2b;
+  background-color: #08a81e;
 }
 .box.grid.recipes h2 {
   font-size: 1.3rem;
@@ -253,7 +253,7 @@ body {
   padding: 10px 15px;
   text-align: left;
   color: #fff;
-  background-color: #e13b2b;
+  background-color: #08a81e;
 }
 .page {
   margin-top: 70px;
@@ -299,7 +299,7 @@ body {
 }
 .page.contact .btn {
   color: #fff;
-  background-color: #e13b2b;
+  background-color: #08a81e;
 }
 .search {
   padding: 60px 0;
@@ -309,7 +309,7 @@ body {
   font-size: 1.2rem;
   margin-bottom: 20px;
   padding-bottom: 10px;
-  color: #e13b2b;
+  color: #08a81e;
   border-bottom: 1px dashed #dedede;
 }
 .search .form-group {
@@ -331,7 +331,7 @@ body {
   height: 45px;
   color: #fff;
   border-radius: 0 4px 4px 0;
-  background-color: #e13b2b;
+  background-color: #08a81e;
 }
 .search .select2-container .select2-selection--single {
   height: 45px;
@@ -353,7 +353,7 @@ body {
   margin-top: 0;
 }
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
-  background-color: #e13b2b !important;
+  background-color: #08a81e !important;
 }
 .select2 {
   width: 100%!important;
@@ -386,7 +386,7 @@ body {
 .submit .content .btn-submit {
   padding: 15px;
   color: #fff;
-  background-color: #e13b2b;
+  background-color: #08a81e;
 }
 .submit .content .select2-container .select2-selection--single {
   height: 45px;
@@ -415,7 +415,7 @@ body {
   padding-top: 13px;
 }
 .submit .content .box .fa-times-circle-o:hover {
-  color: #e13b2b;
+  color: #08a81e;
 }
 .recipe-detail {
   padding: 120px 0;
@@ -430,7 +430,7 @@ body {
   margin-bottom: 40px;
 }
 .recipe-detail .by i {
-  color: #e13b2b;
+  color: #08a81e;
 }
 .recipe-detail h4 {
   font-size: 1rem;
@@ -458,7 +458,7 @@ body {
   margin-bottom: 20px;
   padding: 20px;
   color: #fff;
-  background-color: #e13b2b;
+  background-color: #08a81e;
 }
 .recipe-detail .info p {
   font-size: 0.8rem;
@@ -616,7 +616,7 @@ body {
   margin-top: 10px;
   padding: 17px;
   color: #fff;
-  background: #e13b2b;
+  background: #08a81e;
 }
 footer {
   margin-top: 40px;
@@ -645,7 +645,7 @@ footer ul li a:hover {
   color: #858585;
 }
 footer .btn {
-  background-color: #e13b2b;
+  background-color: #08a81e;
   color: #fff;
 }
 .copyright {
@@ -680,7 +680,7 @@ footer .btn {
   width: 100%;
 }
 .demo .box .title {
-  background-color: #e13b2b;
+  background-color: #08a81e;
   color: #fff;
   padding: 10px;
   text-align: center;
@@ -719,7 +719,7 @@ footer .btn {
   }
   .navbar-light .navbar-nav .active > .nav-link,
   .navbar-light .navbar-nav .nav-link.active {
-    border-bottom: 1px solid #e13b2b;
+    border-bottom: 1px solid #08a81e;
   }
   .navbar-light .navbar-nav .nav-link {
     padding: 15px 15px;
@@ -751,7 +751,7 @@ footer .btn {
   }
   .navbar-light .navbar-nav .active > .nav-link,
   .navbar-light .navbar-nav .nav-link.active {
-    border-bottom: 1px solid #e13b2b;
+    border-bottom: 1px solid #08a81e;
   }
   .navbar-light .navbar-nav .nav-link {
     padding: 15px 15px;
@@ -807,7 +807,7 @@ footer .btn {
   }
   .navbar-light .navbar-nav .active > .nav-link,
   .navbar-light .navbar-nav .nav-link.active {
-    border-bottom: 1px solid #e13b2b;
+    border-bottom: 1px solid #08a81e;
   }
   .navbar-light .navbar-nav .nav-link {
     padding: 15px 15px;
