--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,100 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container">
-    <h1>Welcome to Flask Cookbook!</h1>
+
+<!-- Carousel -->
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="first-slide" src="static/img/slider1.jpg" alt="First slide">
+            <div class="container">
+                <div class="carousel-caption text-left">
+                    <h1><a href="recipe-detail.html">The Salmon Oatmeal Crackers</a></h1>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                    <p><a class="btn btn-lg btn-primary" href="recipe-detail.html" role="button">Read more</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="second-slide" src="static/img/slider2.jpg" alt="Second slide">
+            <div class="container">
+                <div class="carousel-caption">
+                    <h1><a href="recipe-detail.html">Wide range of vegetarian recipes</a></h1>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                    <p><a class="btn btn-lg btn-primary" href="recipe-detail.html" role="button">Read more</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="third-slide" src="static/img/slider3.jpg" alt="Third slide">
+            <div class="container">
+                <div class="carousel-caption text-right">
+                    <h1><a href="recipe-detail.html">Homemade Bread</a></h1>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                    <p><a class="btn btn-lg btn-primary" href="recipe-detail.html" role="button">Read more</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+    </a>
 </div>
+
+<!-- Welcome message -->
+<!-- <div class="page index">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-12 title text-center">
+                    <h1>Welcome to Flask Cookbook!</h1>
+                </div>
+            </div>
+        </div>
+</div> -->
+
+    <!-- List Recipes -->
+<div class="list">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h5><i class="fa fa-cutlery" aria-hidden="true"></i> All Recipes</h5>
+            </div>
+
+
+            <!-- Jinja generate this recipe -->
+            {% for recipe in recipes %}
+            <div class="col-lg-4 col-sm-6">
+                <div class="box grid recipes">
+                    <div class="by"><i class="fa fa-user" aria-hidden="true"></i>{{ recipe.name }}</div>
+                    <a href="#"><img src="images/recipe2.jpg" alt=""></a>
+                    <h2><a href="#">{{ recipe.name }} </a></h2>
+                    <p>{{ recipe.content }}</p>
+                    <div class="tag">
+                        <a href="#">Milk</a>
+                        <a href="#">Lemon</a>
+                        <a href="#">Sayur</a>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+
+
+            <div class="col-lg-12 text-center">
+                <a href="#" class="btn btn-load">Load More</a>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
 
