Small syntax error

--- a/app/templates/recipes_list.html
+++ b/app/templates/recipes_list.html
@@ -72,7 +72,7 @@
                         <p>{{ recipe.content }}</p>
                         <div class="tag">
                             {% for ingredient in first_three_ingredients %}
-                                <a href="#">ingredient.name</a>
+                                <a href="#">{{ ingredient.name }}</a>
                             {% endfor %}
                         </div>
                     </div>
