--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -98,16 +98,7 @@
             <div class="col-lg-3 col-sm-3">
                 <h5>About</h5>
                 <p>Website where you can add all you recipes and discover exciting new ones!</p>
-            </div>
-            <div class="col-lg-3 col-sm-3">
-                <h5>Archive</h5>
-                <ul>
-                    <li><a href="#">July 2019</a></li>
-                    <li><a href="#">June 2019</a></li>
-                    <li><a href="#">May 2019</a></li>
-                    <li><a href="#">April 2019</a></li>
-                </ul>
-            </div>
+            </div>>
             <div class="col-lg-3 col-sm-3">
                 <h5>Recipes</h5>
                 <ul>
