--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -51,38 +51,9 @@
     </a>
 </div>
 
-<!-- Welcome message -->
-<!-- <div class="page index">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-12 title text-center">
-                    <h1>Welcome to Flask Cookbook!</h1>
-                </div>
-            </div>
-        </div>
-</div> -->
+<!-- List recipes -->
+{% include '_list_recipes.html' %}
 
-    <!-- List Recipes -->
-<div class="list">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h5><i class="fa fa-cutlery" aria-hidden="true"></i> All Recipes</h5>
-            </div>
-
-
-            <!-- Jinja will poppulate main page recipes -->
-            {% for recipe in recipes %}
-                {% include '_recipe.html' %}
-            {% endfor %}
-
-
-            <div class="col-lg-12 text-center">
-                <a href="#" class="btn btn-load">Load More</a>
-            </div>
-        </div>
-    </div>
-</div>
 
 {% endblock %}
 
