--- a/app/templates/recipes_list.html
+++ b/app/templates/recipes_list.html
@@ -61,22 +61,9 @@
         </div>
     </div>
     
-    <!-- List Recipes -->
-    <div class="list">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h5><i class="fa fa-cutlery" aria-hidden="true"></i> All Recipes</h5>
-                </div>
-                {% for recipe in recipes %}
-                    {% include '_recipe.html' %}
-                {% endfor %}
-                <div class="col-lg-12 text-center">
-                    <a href="#" class="btn btn-load">Load More</a>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!-- List recipes -->
+    {% include '_list_recipes.html' %}
+
 </form>
 
 
