--- a/app/templates/_comments.html
+++ b/app/templates/_comments.html
@@ -1,19 +1,20 @@
 {% block main %}
 
 <div class="blog-comment">
-<h3>Comments</h3>
-<hr/>
-<ul class="comments">
-    {% for comment in comments %}
-    <li>
-        <div class="post-comments">
-            <p class="meta">{{ comment.timestamp }}<a href="#">{{ comment.author }}</a> says : <i class="pull-right"><a href="#"><small>Reply</small></a></i></p>
-            <p>
-                {{ comment.content}}
-            </p>
-        </div>
-    </li>
-    {% endfor %}
-</ul>
+    <h3>Comments</h3>
+    <hr />
+    <ul class="comments">
+        {% for comment in comments %}
+        <li>
+            <div class="post-comments">
+                <p class="meta">{{ comment.timestamp }}<a href="#">{{ comment.author }}</a> says : <i
+                        class="pull-right"><a href="#"><small>Reply</small></a></i></p>
+                <p>
+                    {{ comment.content}}
+                </p>
+            </div>
+        </li>
+        {% endfor %}
+    </ul>
 
-{% endblock %}
+    {% endblock %}
