--- a/app/templates/recipe_page.html
+++ b/app/templates/recipe_page.html
@@ -60,6 +60,14 @@
                                     </li>
                                     {% endfor %}
                                 </ul>
+                                <h3>Information</h3>
+                                <ul class="ingredients">
+                                    <li>Cuisine: <b>{{ recipe.cuisine.name }}</b></li>
+                                    <li>Category: <b>{{ recipe.category.name }}</b></li>
+                                    <li>Author: <b>{{ recipe.author.username }}</b></li>
+                                    <li>Where is author from: <br><b>{{ recipe.author.country.name }}</b></li>
+
+                                </ul>
                             </div>
                             <div class="col-lg-6 col-sm-6">
                                 <h3>Directions</h3>
