--- a/app/templates/recipe_page.html
+++ b/app/templates/recipe_page.html
@@ -35,7 +35,7 @@
                 
                 
                    <div>
-                        <button type="submit" class="btn" id="edit_btn" onClick="{{url_for('edit_recipe', recipe_name=recipe.name)}}">Edit Recipe</button>
+                        <button type="button" class="btn" id="edit_btn" onClick="{{url_for('edit_recipe', recipe_name=recipe.name)}}">Edit Recipe</button>
                         <p>{{ short_summary }}</p>
                     </div> 
                     <div class="tag">
