--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -101,7 +101,7 @@
             <div class="col-lg-3 col-sm-3">
                 <h5>About</h5>
                 <p>Website where you can add all you recipes and discover exciting new ones!</p>
-            </div>>
+            </div>
             <div class="col-lg-3 col-sm-3">
                 <h5>Recipes</h5>
                 <ul>
